--- a/klein2011dimensionality/main.org
+++ b/klein2011dimensionality/main.org
@@ -31,7 +31,7 @@
 
 
 #+begin_abstract
-This paper deals with the Inverse Reinforcement Learning framework, whose purpose is to learn control policies from demonstrations by an expert. This method inferes from demonstrations an utility function the expert is allegedly maximizing. In this paper we map the reward space into a subset of smaller dimensionality without loss of generality for all /Markov Decision Processes/ (MDPs). We then present three experimental results showing both the promising aspect of the application of this result to existing IRL methods and its shortcomings. We conclude with considerations on further research.
+This paper deals with the Inverse Reinforcement Learning framework, whose purpose is to learn control policies from demonstrations by an expert. This method inferes from demonstrations a utility function the expert is allegedly maximizing. In this paper we map the reward space into a subset of smaller dimensionality without loss of generality for all /Markov Decision Processes/ (MDPs). We then present three experimental results showing both the promising aspect of the application of this result to existing IRL methods and its shortcomings. We conclude with considerations on further research.
 #+end_abstract
 
 #+begin_LaTeX
@@ -49,9 +49,9 @@ This paper deals with the Inverse Reinforcement Learning framework, whose purpos
 * Background
   Often, the RL problem is solved in a /Markov Decision Process/ setting: the agent is said to be in a state $s_t\in S$ (transition probabilities respect the Markovian criterion. As a consequence states contain all the information the agent needs to take a decision) in which it has to choose an action $a_t\in A$. This will make it step stochastically to another state $s_{t+1}$, receiving a reward $R(s_t)$.\\
 
-  The reward is seen here as a mapping from the states only to the reals. This is not normalized in the literature, some authors using a mapping $S \times S \rightarrow \mathbb{R}$ (e.g., in \cite{ng1999policy}) or a mapping $S \times A \times S \rightarrow \mathbb{R}$. We argue that one should not take the action into account when computing the reward. First because the action is irrelevant, what the reward judges is the consequences of an action. No matter the means, the result is what is important. If an action is risky and has yield a high reward by chance, this will likely not happen again, and the reward needs not be lowered by the taking of a risky action as an upcoming transition will likely give the information that taking this action may not be a good idea. Second, in the case of IRL, recording the action can be difficult. It is possible to record the state an agent is in from an external point of view, but guessing the action from the outside is a supplementary engineering problem we shall get rid of if we can. As transitions follow each others, we also argue that there is no use in taking both states of the transition into account. The following state will be present in the next transition, so the associated reward can be computed then. Plus, needing both states to compute the reward is a sign that the states may not respect the markovian criterion. $R$ is represented as a state indexed column vector.\\
+  The reward is seen here as a mapping from the states only to the reals. This is not normalized in the literature, some authors using a mapping $S \times S \rightarrow \mathbb{R}$ (e.g., in \cite{ng1999policy}) or a mapping $S \times A \times S \rightarrow \mathbb{R}$. We argue that one should not take the action into account when computing the reward. In the case of IRL, recording the action can be difficult. It is possible to record the state an agent is in from an external point of view, but guessing the action from the outside is a supplementary engineering problem we shall get rid of if we can. As transitions follow each others, we also argue that there is no use in taking both states of the transition into account. The following state will be present in the next transition, so the associated reward can be computed then. Plus, needing both states to compute the reward is a sign that the states may not respect the markovian criterion. $R$ is represented as a state indexed column vector.\\
 
-  Actions are mapped with the probability with which they make the agent step from one state to the other. Formally, to each action $a$ is associated a $|S|\times |S|$ matrix $P_a$ whose element $(i,j)$ is the probability to transit to state $j$ when taking action $a$ in state $i$. A policy is a mapping $\pi\textrm{: } s\in S\mapsto \pi(s) \in A$ which can be defined the same way, that is to say by associating it with a $P_\pi$ matrix whose $i$-th line is the $i$-th line of the $(P_a, a=\pi(s))$ matrix. We will from now on speak about actions and policies using indiscriminately  the notation $a$ and $\pi$ or $P_a$ and $P_\pi$.\\
+  We place ourselves in the case of finites MDPs. Actions are mapped with the probability with which they make the agent step from one state to the other. Formally, to each action $a$ is associated a $|S|\times |S|$ matrix $P_a$ whose element $(i,j)$ is the probability to transit to state $j$ when taking action $a$ in state $i$. A policy is a mapping $\pi\textrm{: } s\in S\mapsto \pi(s) \in A$ which can be defined the same way, that is to say by associating it with a $P_\pi$ matrix whose $i$-th line is the $i$-th line of the $(P_a, a=\pi(s))$ matrix. From now on, we will speak about actions and policies using indiscriminately  the notations $a$ and $\pi$ or $P_a$ and $P_\pi$.\\
 
   The quality of each policy is quantified by its /value function/, a mapping $S\rightarrow \mathbb{R}$ which associates to each state the expected sum of discounted rewards an agent will get by following policy $\pi$ from this state. Formally, given a policy $\pi$, the value function is defined by: 
 \begin{equation}
@@ -116,7 +116,7 @@ the following holds:  $R_1\equiv R_2$.
 
    Although the proof can be found in the forementionned paper, we find useful to recall its main argument here: the expert is following the best policy with respect to the unknown reward function. These inequalities stem from the fact that for every action $a$, the expected value of the next state must be less than or the same as the expected value of the next state for taking action $\pi(s)$. This is written as $P_\pi V^\pi \succeq P_a V^\pi$. Consequently, the $i^\textrm{th}$ line of the $(P_\pi-P_{a})(I-\gamma P_\pi)^{-1}$ matrix is a constraint on $R$ that, if satisfied, will make it preferable to choose action $\pi(i)$ over $a$ in state $i$.\\
  
-   Equation \ref{ng2000algorithms.eqn} yelds at most $|A|\cdot |S| - |S| = (|A|-1)|S|$ constraints. There are $|A|$ matrices $P_a$, each yelding $|S|$ constraints. $|S|$ of these, however, are null because once for each state we will have $a=\pi(s)$ and the resulting line will be filled with zeros.\\
+   Equation \ref{ng2000algorithms.eqn} yields at most $|A|\cdot |S| - |S| = (|A|-1)|S|$ constraints. There are $|A|$ matrices $P_a$, each yielding $|S|$ constraints. $|S|$ of these, however, are null because once for each state we will have $a=\pi(s)$ and the resulting line will be filled with zeros.\\
 
    When a cost function is added, this is a linear programming problem. The constraints stemming from the definition of $M$, i.e. that $\mathbf{1}^TR=0$ and $||R||_1=1$, can be added to it quite easily, thus restricting the solutions to the previously defined $(|S|-2)$-dimensional subset.\\
 ** Sparsity of the reward vector
@@ -125,8 +125,8 @@ the following holds:  $R_1\equiv R_2$.
    \label{J.eqn}
    J(R) = \left(\sum_{i=1}^{|S|}\min_{a\in A}(P_\pi(i) - P_a(i))(I - \gamma P_\pi)^{-1} R\right) - \lambda||R||_1
    \end{equation}
-* Preliminary work
-  In the previous section, no cost function of our own has been provided, as this is beyond the scope of this paper. If anything cost functions provided in \cite{ng2000algorithms} (e.g., the one given Equation \ref{J.eqn}) would yeld good results with our LP formulation above.\\
+* Preliminary experiment
+  In the previous section, no cost function of our own has been provided, as this is beyond the scope of this paper. If anything cost functions provided in \cite{ng2000algorithms} (e.g., the one given Equation \ref{J.eqn}) would yield good results with our LP formulation above.\\
 
   A first experiment was run to see if a sparse reward could be found by modifying the simplex algorithm to work without a cost function, but enumerating only sparse rewards. In the simplex algorithm, one start by selecting a /basic feasible solution/ that is to say a vertex of the polytope defined by the linear constraints. Then, one jumps from vertex to vertex by minimizing (or maximizing) the cost function. Basic feasible solutions can be found by choosing which constraints are binding and which are not. The linear system is then solved for the free variables (the variables corresponding to the non binding constraints); if a solution exists, it is a basic feasible solution.\\
 
@@ -162,12 +162,12 @@ the following holds:  $R_1\equiv R_2$.
 
   The fact that our algorithm does not solve all kinds of MDPs is problematic. We have two ideas to circumvent this. The first idea is to characterize the class of MDPs our algorithm is able to work with. By restricting ourselves to a certain class of MDPs we could provide theoretical guarantees about our method. This could also help to reduce the computational complexity by allowing a quicker preprocessing of the linear constraints.\\
 
-  The second idea is to transform the state space so that a sparse basic feasible solution always exist. Although more difficult, this would be more powerful as we could tackle any kind of MDPs. In the gridworld, the expert is going from somewhere to somewhere else and the topology bends itself quite well to a configuration where there is one attractive state and one repulsive state. This is the kind of configuration our algorithm outputs. Some problems however do not present this kind of topology. The balancing pole problem is typical example. The expert is trying to balance a pole with one degree of freedom in the vertical position. There is one attractive state (the vertical position) but there are two repulsive states as the pole can fall on one side or the other. This is certainly problematic for our algorithm, but a state space transformation that would bend the state space so that both repulsive states are close to each others would solve this problem. Our hope is to find some kind of automatic feature discovery mechanism that could do this.\\
+  The second idea is to transform the state space so that a sparse basic feasible solution always exists. Although more difficult, this would be more powerful as we could tackle any kind of MDPs. In the gridworld, the expert is going from somewhere to somewhere else and the topology bends itself quite well to a configuration where there is one attractive state and one repulsive state. This is the kind of configuration our algorithm outputs. Some problems however do not present this kind of topology. The balancing pole problem is typical example. The expert is trying to balance a pole with one degree of freedom in the vertical position. There is one attractive state (the vertical position) but there are two repulsive states as the pole can fall on one side or the other. This is certainly problematic for our algorithm, but a state space transformation that would bend the state space so that both repulsive states are close to each other would solve this problem. Our hope is to find some kind of automatic feature discovery mechanism that could do this.\\
 
   One last track for future work is sampling or approximation. Small, discrete state spaces are fine for testing purpose. We should be able to tackle large or continuous problems. The policy of the expert is then unknown but observable. Our algorithm can be modified to work with sample transitions from the expert. Methods exist in the linear programming framework to work with sampled constraints, they could be adapted to our setting.\\
 
 * Conclusion
-In this paper, we give a proposition and an experimental result about it. Although promising on a certain light, there still are serious shortcomings before this can be applied in a practical IRL algorithm. Directions for further work in order to remove these shortcomings are explained.
+In this paper, we give a proposition reducing the dimensionality of the set in which the reward is looked for and an experimental result using it. Although promising on a certain light, there still are serious shortcomings before this can be applied in a practical IRL algorithm. Directions for further work in order to remove these shortcomings are explained.
 #+begin_LaTeX
 \bibliographystyle{IEEEtran}
 \bibliography{../../Biblio/Biblio}
