--- a/NouveauxAlgos.org
+++ b/NouveauxAlgos.org
@@ -43,10 +43,13 @@
 
   Il convient probablement d'entraîner le classifieur sur des données ayant une structure temporelle (des trajectoires) afin que la fonction de score capture cette structure.
 * Loss-augmented feature expectation matching (LAFEM ?)
+** Principe
   Toujours en se basant sur la ressemblance entre $s$ et $Q^*$, on peut choisir de directement optimiser la fonction :
   \begin{equation}
   L_n(q) = {1\over N} \sum_{i=1}^N\left(\max_{a}(q(s_i,a) + l(s_i,a)) - q(s_i,a_i) \right)
   \end{equation}
+
+  FIXME: Introduction correcte de $\mu(s,a)$ et sa représentation.
 
   Pour cela, on exprime la fonction de valeur suivie par l'expert comme linéaire selon certaines features. En notant $\mu_E$ la fonction de feature expectation, on peut écrire $\hat Q(s,a) = \omega ^T \mu_E(s,a)$, que l'on réinjecte dans notre fonction de coût pour obtenir : 
  \begin{equation}
@@ -55,13 +58,346 @@
 
   Une descente de gradient donne la règle d'update suivante :
   \begin{equation}
-  \omega_{t+1} = \omega_t -\alpha_t\left(\mu_E(s_i,a^*) - \mu_E(s_i,a_i)\right)
+  \omega_{t+1} = \omega_t -\alpha_t\sum_{i=1}^N\left(\mu_E(s_i,a^*) - \mu_E(s_i,a_i)\right)
   \end{equation}
 
-  Avec $\alpha_t$ un pas d'apprentissage, et $a^*\arg\max_{a} = \omega ^T \mu_E(s_i,a) + l(s_i,a)$
+  Avec $\alpha_t$ un pas d'apprentissage, et $a^* = \arg\max\limits_{a} = \omega_t ^T \mu_E(s_i,a) + l(s_i,a)$
+** Algorithme détaillé
+   L'algorithme prend en entrée :
+   - une fonction de perte $l : S\times A \rightarrow \mathbb R$
+   - la /feature expectation/ de l'expert $\mu_E : S\times A \rightarrow \mathbb R ^p$
+   - un pas d'apprentissage $\alpha : \mathbb N \rightarrow \mathbb R$
+   - des données provenant de l'expert $\{(s_i,a_i)\}_{i=1..N}$
+   - un vecteur de paramètres initial $\omega_0$
+   - un nombre maximum d'itérations $T\in \mathbb N$
+   - une description de l'espace d'action $A$
 
-\bibliographystyle{plainnat}
-\bibliography{../Biblio/Biblio}
+     
+   L'algorithme se déroule comme suit : 
+   - Pour le nombre d'itérations prévues :
+     - Initialiser $\Delta\omega \leftarrow [0...0]^T$
+     - Pour chacun des points de données
+       - Déterminer $a^* = \arg\max\limits_{a} = \omega_t ^T \mu_E(s_i,a) + l(s_i,a)$
+       - $\Delta\omega \leftarrow \Delta\omega + \mu_E(s_i,a^*) - \mu_E(s_i,a_i)$
+     - Effectuer la mise à jour $\omega_{t+1} = \omega_t -\alpha_t\Delta\omega$
+   - retourner $\omega_T$
+
+* Code :code:
+** LAFEM
+   L'algorithme est implémenté dans une classe abstraite en python. Les éléments nécessaires à l'algorithme sont définis comme des fonctions abstraites, ce qui fait qu'il est impossible de créer ou d'utiliser cette classe sans la sous classer en définissant les éléments nécessaires.
+
+#+begin_src python :tangle LAFEM.py
+from numpy import *
+import os
+class LAFEM:
+   def __init__( self ):
+      if self.__class__ == LAFEM:
+         raise NotImplementedError, "Cannot create object of class LAFEM"
+#+end_src
+
+   L'algorithme prend en entrée :
+   - une fonction de perte $l : S\times A \rightarrow \mathbb R$, prenant deux vecteurs ligne $s$ et $a$ en argument, renvoyant un réel
+     #+begin_src python :tangle LAFEM.py
+   def l( self, s, a ):
+      raise NotImplementedError, "Cannot call abstract method"
+     #+end_src
+   - la /feature expectation/ de l'expert $\mu_E : S\times A \rightarrow \mathbb R ^p$, prenant deux vecteurs lignes $s$ et $a$ en argument, renvoyant un vecteur colonne
+     #+begin_src python :tangle LAFEM.py
+   def mu_E( self, s, a ):
+      raise NotImplementedError, "Cannot call abstract method"
+     #+end_src
+   - un pas d'apprentissage $\alpha : \mathbb N \rightarrow \mathbb R$, prenant un entier en argument, renvoyant un réel
+     #+begin_src python :tangle LAFEM.py
+   def alpha( self, t ):
+      raise NotImplementedError, "Cannot call abstract method"
+     #+end_src
+   - des données provenant de l'expert $\{(s_i,a_i)\}_{i=1..N}$, il faut que ce membre soit iterable et renvoie des couples de vecteurs ligne $(s,a)$
+     #+begin_src python :tangle LAFEM.py
+   data=[]
+     #+end_src
+   - un vecteur de paramètres initial $\omega_0$
+     #+begin_src python :tangle LAFEM.py
+   omega_0=array([])
+     #+end_src
+   - un nombre maximum d'itérations $T\in \mathbb N$
+     #+begin_src python :tangle LAFEM.py
+   T=-1
+     #+end_src
+   - une description de l'espace d'action $A$, ce membre doit être itérable
+     #+begin_src python :tangle LAFEM.py
+   A=[]
+     #+end_src
+
+     
+   L'algorithme se déroule comme suit : 
+   #+begin_src python :tangle LAFEM.py
+   def run( self ):
+      omega = omega_0
+   #+end_src
+   - Pour le nombre d'itérations prévues :
+     #+begin_src python :tangle LAFEM.py
+      for t in range(0,T):
+     #+end_src
+     - Initialiser $\Delta\omega \leftarrow [0...0]^T$
+       #+begin_src python :tangle LAFEM.py
+         DeltaOmega = zeros(( omega_0.size, 1 ))
+       #+end_src
+     - Pour chacun des points de données
+       #+begin_src python :tangle LAFEM.py
+         for sa in data:
+       #+end_src
+       - Déterminer $a^* = \arg\max\limits_{a} = \omega_t ^T \mu_E(s_i,a) + l(s_i,a)$
+         #+begin_src python :tangle LAFEM.py
+            val = -Inf
+            a_star = array([])
+            for a in A:
+               newval = dot( omega.transpose(), mu_E( sa.s, a ) ) + l( sa.s, a )
+               if newval > val:
+                  val = newval
+                  a_star = a
+         #+end_src
+       - $\Delta\omega \leftarrow \Delta\omega + \mu_E(s_i,a^*) - \mu_E(s_i,a_i)$	 
+         #+begin_src python :tangle LAFEM.py
+            DeltaOmega = DeltaOmega + mu_E( sa.s, a_star ) - mu_E( sa.s, sa.a )
+         #+end_src
+     - Effectuer la mise à jour $\omega_{t+1} = \omega_t -\alpha_t\Delta\omega$
+       #+begin_src python :tangle LAFEM.py
+            omega = omega - alpha( t ) * DeltaOmega
+       #+end_src
+   - retourner $\omega_T$
+     #+begin_src python :tangle LAFEM.py
+      return omega
+     #+end_src
+     
+* Expériences
+** Expérience 1
+*** Description
+    FIXME: Description correcte du Gridworld.
+
+    La première expérience consiste à entraîner un expert sur un gridworld de 5 cases par 5 case, avec la récompense en haut à droite, puis à faire tourner LAFEM sur un set de données couvrant la totalité de l'espace d'état, un calcul exact de $\mu_E$, une fonction de perte extrêmement simple ($1$ en cas de désaccord avec l'expert, $0$ sinon) et une initialisation de la récompense à $0$ partout. Comme le problème est discret, la représentation est tabulaire.
+
+
+    L'expérience se déroule comme suit :
+    - Entraîner un expert sur le problème du gridworld, i.e. définir $\pi_E : S\rightarrow A$
+    - Définir $l$ telle que $l(s,a) = 0$ si $a=\pi_E(s)$, $1$ sinon
+    - définir $\alpha(t) = 0.1,\forall t$ (pifomètre)
+    - Initialiser $D\leftarrow \emptyset$
+    - Pour chaque état $s \in S$
+      - $D \leftarrow D \cup (s,\pi_E(s))$
+    - Initialiser $\omega_0 = [0...0]^T$
+    - Fixer $T=20$ (pifomètre)
+    - Faire tourner LAFEM
+    - Entrainer un agent sur le problème du gridworld, avec la récompense trouvée par LAFEM : définir $\pi : S\rightarrow A$
+    - Définir une politique stochastique uniforme $\pi_r$
+    - Comparer $E[\omega^T\mu_E(s)| s\in S]$, $E[\omega^T\mu_\pi(s)| s\in S]$ et $E[\omega^T\mu_r(s)| s\in S]$
+
+*** Code :code:
+**** Calcul exact de la /feature expectation/
+     En ce qui concerne l'implémentation, on reprend le protocole ci dessus et on se soucie des détails.
+
+    De la même manière qu'il est possible d'écrire l'equation de Bellman sous forme matricielle : 
+    \begin{equation}
+    V^\pi = R + \gamma P_\pi V^\pi 
+    \end{equation}
+    On peut écrire le même type d'équation pour $\mu$, pour une composante $i$ :
+    \begin{equation}
+    \mu^\pi_i = \phi_i + \gamma P_\pi\mu^\pi_i 
+    \end{equation}
+    Si l'on considère la matrice $\mathbf \mu$ comme étant indexée par les états sur les lignes et par les composentes sur les colonnes, et la même technique pour la matrice $\mathbf \Phi$, alors il est possible d'écrire : 
+    \begin{equation}
+    \mathbf \mu^\pi = \mathbf\Phi + \gamma P_\pi\mathbf\mu^\pi
+    \end{equation}
+    Grâce à cette équation il est possible d'adapter les algorithmes de programmation dynamique itératifs pour obtenir un calcul exact de $\mathbf \mu^\pi$.
+
+    Cependant, la fonction dont nous avons besoin n'est pas $\mu^\pi : S \rightarrow \mathbb R^p$, mais $\mu^\pi : S \times A \rightarrow \mathbb R^p$ (la notation reste la même pour ne pas tout surcharger, la différence étant réglée assze vite). Ces deux fonctions ont entre elles la même relation qu'ont $V$ et $Q$.
+    Ainsi puisque l'on peut écrire :
+    \begin{eqnarray}
+    Q^\pi(s,a) &=& R(s) + \gamma P_a(s)V^\pi\\
+    Q^\pi_a &=& R + \gamma P_aV^\pi
+    \end{eqnarray}
+    On peut faire le parallèle (en notant $\mu^\pi(s,\cdot) = \mu^\pi_a(s)$) :
+    \begin{eqnarray}
+    \mu^\pi(s,a) &=& \phi(s) + \gamma P_a(s)\mathbf \mu^\pi\\
+    \mathbf \mu^\pi_a &=& \mathbf \Phi + \gamma P_a\mathbf \mu^\pi
+    \end{eqnarray}
+    
+    Pour résumer, il est possible de calculer la matrice $\mathbf \mu^\pi$ grâce à une adaptation des algorithmes de programmation dynamique, et à partir de celle ci de déduire les matrices $\mu^\pi_a$, qui sont celles dont nous avons besoin.
+
+    #+begin_src python :tangle NA_DP_mu.py
+from numpy import *
+import scipy
+
+g_fGamma = 0.9
+
+def NA_DP_mu( pi, Phi ):
+    "Returns the matrix corresponding to the feature expectation of the given policy."
+    global g_fGamma
+    answer = rand( Phi.shape[0], Phi.shape[1] )
+    changed = True
+    while changed:
+        new_answer = Phi + g_fGamma*dot(pi,answer)
+        diff = norm( new_answer - answer)
+        answer = new_answer
+        if diff > 0.01:
+            changed = True
+        else:
+            changed = False
+    return answer
+    #+end_src
+**** Configuration de LAFEM
+
+    On importe ce qu'il importe d'importer
+    #+begin_src python :tangle NA_Exp1.py
+from a2str import *
+from LAFEM import *
+    #+end_src
+    
+    On définit ce qui est nécessaire au fonctionnement de LAFEM en sous classant la classe abstraite LAFEM
+      #+begin_src python :tangle NA_Exp1.py
+class LAFEM_Exp1( LAFEM ):
+    P_north = array([])
+    P_south = array([])
+    P_east = array([])
+    P_west = array([])
+    Pi_E = array([])
+    Pi_E_txt = {}
+    Mu_north = array([])
+    Mu_west = array([])
+    Mu_east = array([])
+    Mu_south = array([])
+      #+end_src
+
+    On définit $S$ et $A$ de manière à pouvoir itérer dessus.
+    #+begin_src python :tangle NA_Exp1.py
+    def Sgenerator( self ):
+        for x in range(0,5):
+            for y in range(0,5):
+                yield array([x,y])
+
+    S = Sgenerator
+    A = ['North','West','East','South']
+    #+end_src
+
+    Pour entraîner un expert sur le problème du gridworld, i.e. définir $\pi_E : S\rightarrow A$, on réutilise le code du [[file:TaskTransfer.org::*Code][task transfer]] tel quel pour obtenir la politique optimale.
+      #+begin_src python :tangle NA_Exp1.py
+    def __init__( self ):
+        cmd = "python TT_5x5_expertPGen.py";
+        os.system( cmd )
+        self.Pi_E = genfromtxt("TT_5x5_Ppi.mat")
+      #+end_src      
+    On peuple $D$ : 
+      #+begin_src python :tangle NA_Exp1.py
+        self.P_north = genfromtxt( "TT_5x5_PENorth.mat" )
+        self.P_east = genfromtxt( "TT_5x5_PEEast.mat" )
+        self.P_west = genfromtxt( "TT_5x5_PEWest.mat" )
+        self.P_south = genfromtxt( "TT_5x5_PESouth.mat" )
+        for s in self.S():
+            index = s[0]+5*s[1]
+            pi_s = self.Pi_E[index]
+            a = ''
+            if all(pi_s == self.P_north[index]):
+                self.Pi_E_txt[l2str(s)] = 'North'
+            elif all(pi_s == self.P_south[index]):
+                self.Pi_E_txt[l2str(s)] = 'South'
+            elif all(pi_s == self.P_west[index]):
+                self.Pi_E_txt[l2str(s)] = 'West'
+            elif all(pi_s == self.P_east[index]):
+                self.Pi_E_txt[l2str(s)] = 'East'
+            else:
+                exit(-1)
+            self.data = self.data+[ [ s, self.Pi_E_txt[a2str(s)] ] ]
+      #+end_src
+    On calcule les matrices de /feature expectation/
+      #+begin_src python :tangle NA_Exp1.py
+        self.Mu_E = NA_DP_mu( self.Pi_E, identity(25) )
+        self.Mu_north = identity(25) + 0.9*dot(self.P_north,self.Mu_E)
+        self.Mu_west = identity(25) + 0.9*dot(self.P_west,self.Mu_E)
+        self.Mu_east = identity(25) + 0.9*dot(self.P_east,self.Mu_E)
+        self.Mu_south = identity(25) + 0.9*dot(self.P_south,self.Mu_E)
+      #+end_src
+
+    On définit la fonction de perte $l$ :
+    #+begin_src python :tangle NA_Exp1.py
+    def l( self, s, a ):
+        if self.Pi_E_txt[a2str(s)] == a:
+            return 0
+        else:
+            return 1
+    #+end_src
+    
+    On définit la fonction renvoyant $\mu_E(s,a)$ : 
+    #+begin_src python :tangle NA_Exp1.py
+    def mu_E( self, s, a ):
+        mu_a = array([])
+        if a == 'North':
+            mu_a = self.Mu_north
+        if a == 'West':
+            mu_a = self.Mu_west
+        if a == 'East':
+            mu_a = self.Mu_east
+        if a == 'South':
+            mu_a = self.Mu_south
+        else:
+            exit(-1)
+        index = s[0]+5*s[1]
+        return (mu_a[index]).transpose()
+    #+end_src
+    
+
+
+    On définit $\alpha(t) = 0.1,\forall t$ (pifomètre)
+      #+begin_src python :tangle NA_Exp1.py
+    def alpha( t ):
+        return 0.1
+      #+end_src
+    On initialise $\omega_0 = [0...0]^T$
+      #+begin_src python :tangle NA_Exp1.py
+    omega_0 = zeros( (25, 1) )
+      #+end_src
+    - Fixer $T=20$ (pifomètre)
+      #+begin_src python :tangle NA_Exp1.py
+    T = 20
+      #+end_src
+**** Expérience 1
+     On fait tourner le machin :
+      #+begin_src python :tangle NA_Exp1.py
+lafem = LAFEM_Exp1()
+omega_lafem = lafem.run()
+      #+end_src
+     
+     Entrainer un agent sur le problème du gridworld, avec la récompense trouvée par LAFEM : définir $\pi : S\rightarrow A$
+     #+begin_src python :tangle NA_Exp1.py
+Pi = TT_DP( omega_lafem, (P_north, P_south, P_west, P_east) )
+     #+end_src
+      
+     Définir une politique stochastique uniforme $\pi_r$
+     Comparer $E[\omega^T\mu_E(s)| s\in S]$, $E[\omega^T\mu_\pi(s)| s\in S]$ et $E[\omega^T\mu_r(s)| s\in S]$
+     #+begin_src python :tangle NA_Exp1.py
+true_reward = zeros((25,1))
+true_reward[4,0] = 1
+perf_expert = 0
+cnt = 0
+for s in S:
+    index = s[0] + 5*s[1]
+    perf_expert = perf_expert + dot( true_reward.transpose(), Mu_E[index].transpose() )
+    cnt = cnt + 1
+perf_expert = perf_expert/cnt
+
+Mu_pi = NA_DP_mu( Pi, identity(25) )
+perf_agent = 0
+cnt = 0
+for s in S:
+    index = s[0] + 5*s[1]
+    perf_agent = perf_agent + dot( true_reward.transpose(), Mu_pi[index].transpose() )
+
+print "Performance moyenne de l'expert : "
+print perf_expert
+
+print "Performance moyenne de l'agent"
+print perf_agent
+      #+end_src
+      
+*** Résultats
 * Making this document :code:
 
 #+begin_src makefile :tangle Makefile
@@ -81,3 +417,5 @@ NA_cleanDoc:
 	find . -maxdepth 1 -iname "*.log"| xargs -tr rm &&\
 	find . -maxdepth 1 -iname "*.toc"| xargs -tr rm
 #+end_src
+\bibliographystyle{plainnat}
+\bibliography{../Biblio/Biblio}
