--- a/TaskTransfer.org
+++ b/TaskTransfer.org
@@ -1232,15 +1232,15 @@ def TT_SF( P_pi, Actions ):
 #+srcname: TT_cleanCode_make
 #+begin_src makefile
 TT_cleanCode:
-	find . -maxdepth 1 -iname "TT_*.py"   | xargs -tr rm &&\
-	find . -maxdepth 1 -iname "TT.py"   | xargs -tr rm &&\
-	find . -maxdepth 1 -iname "TT*.pyc"   | xargs -tr rm &&\
-	find . -maxdepth 1 -iname "TT*.gp"   | xargs -tr rm &&\
-	find . -maxdepth 1 -iname "TT*.ps"   | xargs -tr rm &&\
-	find . -maxdepth 1 -iname "TaskTransfer.py"   | xargs -tr rm &&\
-	find . -maxdepth 1 -iname "TaskTransfer_SF.py"   | xargs -tr rm &&\
-	find . -maxdepth 1 -iname "a2str.py"   | xargs -tr rm &&\
-	find . -maxdepth 1 -iname "Constraint.py"   | xargs -tr rm
+	find . -maxdepth 1 -iname "TT_*.py"   | xargs -t rm &&\
+	find . -maxdepth 1 -iname "TT.py"   | xargs -t rm &&\
+	find . -maxdepth 1 -iname "TT*.pyc"   | xargs -t rm &&\
+	find . -maxdepth 1 -iname "TT*.gp"   | xargs -t rm &&\
+	find . -maxdepth 1 -iname "TT*.ps"   | xargs -t rm &&\
+	find . -maxdepth 1 -iname "TaskTransfer.py"   | xargs -t rm &&\
+	find . -maxdepth 1 -iname "TaskTransfer_SF.py"   | xargs -t rm &&\
+	find . -maxdepth 1 -iname "a2str.py"   | xargs -t rm &&\
+	find . -maxdepth 1 -iname "Constraint.py"   | xargs -t rm
 #+end_src    
 ** Tests
 *** Test in 3D
@@ -1288,11 +1288,11 @@ TT_test0: TaskTransfer.py
 #+srcname: TT_cleanTest0_make
 #+begin_src makefile
 TT_cleanTest0:
-	find test -maxdepth 1 -iname "TT_outT01.mat"   | xargs -tr rm &&\
-	find test -maxdepth 1 -iname "TT_outT02.mat" | xargs -tr rm &&\
-	find test -maxdepth 1 -iname "TT_CT01.mat"   | xargs -tr rm &&\
-	find test -maxdepth 1 -iname "TT_CT02.mat" | xargs -tr rm &&\
-	find test -maxdepth 1 -iname "TT_expectedOutT0.mat" | xargs -tr rm
+	find test -maxdepth 1 -iname "TT_outT01.mat"   | xargs -t rm &&\
+	find test -maxdepth 1 -iname "TT_outT02.mat" | xargs -t rm &&\
+	find test -maxdepth 1 -iname "TT_CT01.mat"   | xargs -t rm &&\
+	find test -maxdepth 1 -iname "TT_CT02.mat" | xargs -t rm &&\
+	find test -maxdepth 1 -iname "TT_expectedOutT0.mat" | xargs -t rm
 #+end_src
 *** Task Transfer on a 2x2 Gridworld
     In this simple setting we imagine a 2x2 gridworld and two experts. Both experts optimize the same reward, located in the north east corner. Both experts can choose between the same actions at each step : the four compass directions. The first expert's policy is NORTH, EAST, the second one is EAST, NORTH. We want to see in this experiment if the true reward is among the set of reward output by our algorithm.
@@ -1381,18 +1381,18 @@ TT_test1:
     #+srcname: TT_cleanTest1_make
     #+begin_src makefile
 TT_cleanTest1:
-	find test -maxdepth 1 -iname "TT_outT01.mat"   | xargs -tr rm &&\
-	find test -maxdepth 1 -iname "TT_outT02.mat" | xargs -tr rm
-	find test -maxdepth 1 -iname "TT_C1.mat" | xargs -tr rm &&\
-	find test -maxdepth 1 -iname "TT_C2.mat" | xargs -tr rm &&\
-	find test -maxdepth 1 -iname "TT_CBoth.mat" | xargs -tr rm &&\
-	find test -maxdepth 1 -iname "TT_PPi1.mat" | xargs -tr rm &&\
-	find test -maxdepth 1 -iname "TT_PPi2.mat" | xargs -tr rm &&\
-	find test -maxdepth 1 -iname "TT_PNorth.mat" | xargs -tr rm &&\
-	find test -maxdepth 1 -iname "TT_PSouth.mat" | xargs -tr rm &&\
-	find test -maxdepth 1 -iname "TT_PWest.mat" | xargs -tr rm &&\
-	find test -maxdepth 1 -iname "TT_PEast.mat" | xargs -tr rm &&\
-	find test -maxdepth 1 -iname "TT_outT1.mat" | xargs -tr rm
+	find test -maxdepth 1 -iname "TT_outT01.mat"   | xargs -t rm &&\
+	find test -maxdepth 1 -iname "TT_outT02.mat" | xargs -t rm
+	find test -maxdepth 1 -iname "TT_C1.mat" | xargs -t rm &&\
+	find test -maxdepth 1 -iname "TT_C2.mat" | xargs -t rm &&\
+	find test -maxdepth 1 -iname "TT_CBoth.mat" | xargs -t rm &&\
+	find test -maxdepth 1 -iname "TT_PPi1.mat" | xargs -t rm &&\
+	find test -maxdepth 1 -iname "TT_PPi2.mat" | xargs -t rm &&\
+	find test -maxdepth 1 -iname "TT_PNorth.mat" | xargs -t rm &&\
+	find test -maxdepth 1 -iname "TT_PSouth.mat" | xargs -t rm &&\
+	find test -maxdepth 1 -iname "TT_PWest.mat" | xargs -t rm &&\
+	find test -maxdepth 1 -iname "TT_PEast.mat" | xargs -t rm &&\
+	find test -maxdepth 1 -iname "TT_outT1.mat" | xargs -t rm
     #+end_src
 *** Dynamic pogamming on a 2x2 Gridworld
     We want to test our dynamic programming functions. We use help from the files defined in the [[TaskTransfer on a 2x2 Gridworld]] test.
