--- a/klein2011dimensionality/main.org
+++ b/klein2011dimensionality/main.org
@@ -300,7 +300,12 @@ clean:
 	find . -maxdepth 1 -iname "*.blg"| xargs -t rm &&\
 	find . -maxdepth 1 -iname "main.tex"| xargs -t rm &&\
 	find . -maxdepth 1 -iname "main.pdf"| xargs -t rm &&\
+	find . -maxdepth 1 -iname "slides.pdf"| xargs -t rm &&\
 	find . -maxdepth 1 -iname "*.log"| xargs -t rm &&\
+	find . -maxdepth 1 -iname "*.nav"| xargs -t rm &&\
+	find . -maxdepth 1 -iname "*.out"| xargs -t rm &&\
+	find . -maxdepth 1 -iname "*.snm"| xargs -t rm &&\
+	find . -maxdepth 1 -iname "*~"| xargs -t rm &&\
 	find . -maxdepth 1 -iname "*.toc"| xargs -t rm
 
     #+end_src
